--- a/styleobsess/css/style.css
+++ b/styleobsess/css/style.css
@@ -1,7 +1,7 @@
 /*new css*/
 
 body {
-    background: url('../img/bg.jpeg') no-repeat center center fixed;
+    background: url('http://www.myfreetextures.com/wp-content/uploads/2011/06/20090405-PHIL9520.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -9,11 +9,27 @@ body {
 }
 
 .search {
+  width: 75%;
+  margin: auto;
+  padding: 3em;
   text-align: center;
-  align-items: center;
-  position: inherit;
-  color: white;
-  padding-bottom: 50px;
-  margin-bottom: 20px;
-  margin-top: 20px;
+}
+
+.search input {
+  display: inline;
+  width: 50%;
+  font-size: 1.5em;
+  padding: 1em;
+}
+
+.search button {
+  margin-top: -8px;
+  display: inline;  
+}
+
+.box .header {
+  text-transform: none;
+  text-align: center;
+  margin-bottom: 1em;
+  color: #444;
 }
